Bug 92045 - Unchecking blinking font effect does not work with DOCX
Summary: Unchecking blinking font effect does not work with DOCX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.3.2 release
Hardware: All All
: medium minor
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.2.0 target:5.1.0.2 target:5...
Keywords: bibisected, bisected, regression
: 93406 94805 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-13 11:19 UTC by Chris Knowles
Modified: 2016-10-25 19:11 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
start of manuscript for new novel entitled Upon This Rock (4.96 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-06-13 11:19 UTC, Chris Knowles
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Knowles 2015-06-13 11:19:21 UTC
Created attachment 116497 [details]
start of manuscript for new novel entitled Upon This Rock

I am a professional author and have written my last five published novels using Writer.  This is a new problem.  After I wrote and saved the first chapter I closed the application.  The next time I opened the document to begin writing again parts, but not all, of the document started BLINKING. I started by highlighting just those sections that were blinking.  Then I went to FORMAT>CHARACTER> and removed either the check mark or box from the "blinking" box.  When nothing was left blinking I saved the document and closed the application.  When I reopened the document the same sections started blinking again.  Then I highlighted the ENTIRE DOCUMENT, both those parts that were blinking and those that were not.  I again went to FORMAT>CHARACTER and removed either the check mark or the black box from the "blinking" box.  I again saved the document and closed the application.  When I reopened the document the same sections were blinking.  I do not want ANY BLINKING.  What do I do?
Comment 1 MM 2015-06-13 13:55:12 UTC
Confirmed with v4.4.4.1 under window 7 x64.

I see the blinking when saving to docx, but not when saving to odt or doc.
So what you can do is to save in LO's native format, ODT.
Comment 2 Julien Nabet 2015-06-13 14:34:15 UTC
On which LO version are you? FYI, last stable one is 4.4.3

Then, could you make a copy of your doc if it's not already done and for the test, try this:
- Select all
- Right click
- Clear Direct formatting
- save
- reopen the doc
For me, it seemed ok when I test with your file on LO Debian x86-64 with LO Debian package 4.4.4.1
Comment 3 Julien Nabet 2015-06-13 14:35:31 UTC
Sorry I wasn't clear.
I reproduced the problem but when I used "Clear direct formatting" on all the doc, saved in docx, then reopened, it was ok.
Comment 4 MM 2015-06-13 15:11:59 UTC
No, there is something wrong with blinking and docx. You can use clear formatting, save and the blinking is gone. But if you can reproduce it easily.

New doc

1) Type some text.
2) Select All
3) Format > Character > Font Effects - Turn blinking on
4) Save to docx
5) Reload doc
6) Select All
7) Format > Character > Font Effects - Turn blinking off
8) Save to docx
9) Reload doc

Now the blinking is on again.

Tested with v4.4.4.1 under windows 7 x64 and v5.0.0.0 b3 under mint 17.1 x64.
Comment 5 Buovjaga 2015-06-13 15:55:21 UTC
(In reply to MM from comment #4)
> No, there is something wrong with blinking and docx. You can use clear
> formatting, save and the blinking is gone. But if you can reproduce it
> easily.
> 
> New doc
> 
> 1) Type some text.
> 2) Select All
> 3) Format > Character > Font Effects - Turn blinking on
> 4) Save to docx
> 5) Reload doc
> 6) Select All
> 7) Format > Character > Font Effects - Turn blinking off
> 8) Save to docx
> 9) Reload doc
> 
> Now the blinking is on again.
> 
> Tested with v4.4.4.1 under windows 7 x64 and v5.0.0.0 b3 under mint 17.1 x64.

Reproduced.

Lowering severity as workaround exists: https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: d56b125f6c6c18ac40712cefc3cec06530750e15
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-13_07:08:43
Locale: fi-FI (fi_FI)
Comment 6 Julien Nabet 2015-06-13 16:49:51 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
I noticed this on console:
warn:legacy.osl:1421:1:sw/source/filter/ww8/wrtww8.cxx:660: Where is my ItemSet / pChpIter ?
when testing with docx, setting or unsetting blink, then saved

Miklos: thought you might be interested in this one.
Comment 7 Gordo 2015-06-13 18:51:39 UTC
For the steps in comment 4, if on step 2 you select one word instead of select all then after step 9 everything will be blinking.
Comment 8 Gordo 2015-06-13 19:27:10 UTC
Does not happen in 4.3.7.2.  Original attachment does not blink.
Comment 9 MM 2015-06-13 19:42:35 UTC
Seems it started with v4.4.4.1.
Can't reproduce it with earlier versions.

Set as regression.
Comment 10 Gordo 2015-06-13 20:02:35 UTC
For my testing in comment 7 I forgot to mention that it was on 4.4.3.2.

Windows Vista 64
Version: 4.4.3.2
Build ID: 88805f81e9fe61362df02b9941de8e38a9b5fd16
Comment 11 Terrence Enger 2015-06-14 16:53:00 UTC
Working in the 44 max bibisect repository, I see from `git bisect bad` ...
    3122214ee3dc70716ba02e425d4e128d90f5341f is the first bad commit
    commit 3122214ee3dc70716ba02e425d4e128d90f5341f
    Author: Matthew Francis <mjay.francis@gmail.com>
    Date:   Sun Mar 15 02:59:35 2015 +0800

        source-hash-eeb8297e47bae11f2aeaa7bae6e51eee921e9e58
    
        commit eeb8297e47bae11f2aeaa7bae6e51eee921e9e58
        Author:     Miklos Vajna <vmiklos@collabora.co.uk>
        AuthorDate: Mon Sep 22 12:39:20 2014 +0200
        Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
        CommitDate: Mon Sep 22 17:14:42 2014 +0200
    
            Use constants for ST_TextEffect values
    
            Change-Id: If4226bbe1124ca21893840558559b2b0e24440d3

    :040000 040000 b453feb7e82b273b23a2983559cf5074f49d8fda b2daf619b1f17e6ab7f135c1eb892eff30288f2d M	opt

and from `git bisect log` ...

    # bad: [cf6ea17155fabb2a120ba07c150735591ac861d7] source-hash-3f94c9e9ddfd807b449f3bb9b232cf2041fa12d2
    # good: [fc71ac001f16209654d15ef8c1c4018aa55769f5] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
    git bisect start 'latest' 'oldest'
    # good: [8cf60cc706948588e2f33a6d98b7c55d454e362a] source-hash-f340f0454627939f1830826fb5cc53a90e6c62a4
    git bisect good 8cf60cc706948588e2f33a6d98b7c55d454e362a
    # bad: [7beddf3808dadd525d7e55c00a5a90a2b44c23d3] source-hash-2f10386ce577f52e139aa23d41bc787d8e0b4d59
    git bisect bad 7beddf3808dadd525d7e55c00a5a90a2b44c23d3
    # good: [7d319609d8266af06aa3256fd3773d052b9150dc] source-hash-1fec67aab152e0c0ad6dd85082c50f1beff7d520
    git bisect good 7d319609d8266af06aa3256fd3773d052b9150dc
    # bad: [136c4fdf380a2d05111e313540e4be01a74c4eb6] source-hash-7bacb89bb955f4985e435c33dde629099dab744b
    git bisect bad 136c4fdf380a2d05111e313540e4be01a74c4eb6
    # bad: [f3c053a278b473b5029baf72c02bdc3d78289b51] source-hash-a37a8733609a59eccabf89b2ff67d5ee6bf194bb
    git bisect bad f3c053a278b473b5029baf72c02bdc3d78289b51
    # good: [71689e22672a593ea6e869f0b2009d9046b5c880] source-hash-1f291178605aea72a988d19db75500dfd2c23424
    git bisect good 71689e22672a593ea6e869f0b2009d9046b5c880
    # good: [5dc233d30274d6d3a51c2dcbcab55b19ed789497] source-hash-ce5dd8647083c944fb298c491fb526dad17a8a1a
    git bisect good 5dc233d30274d6d3a51c2dcbcab55b19ed789497
    # bad: [8ba71e3ef7e29d9588b9df1c0c08c0f5bf9ebbb1] source-hash-221c2eb24b5eeeadb265cfd010fd6851715b24b5
    git bisect bad 8ba71e3ef7e29d9588b9df1c0c08c0f5bf9ebbb1
    # bad: [10df0d16fd0d0dde7a127c480bc9958e7bfc288f] source-hash-b529efc45962cd451198df273f41fc69f16ac1a6
    git bisect bad 10df0d16fd0d0dde7a127c480bc9958e7bfc288f
    # good: [d09f11a4638da607bb526964c031432df6fb1b76] source-hash-3c6da8e49a96513eda73656f3f6212f980a74b51
    git bisect good d09f11a4638da607bb526964c031432df6fb1b76
    # bad: [1af2a4dffab0631e6aac1a5bcef42aa1ecb99ee9] source-hash-b1a5e34e27c0118f319aebbc5a6c9cdf05929239
    git bisect bad 1af2a4dffab0631e6aac1a5bcef42aa1ecb99ee9
    # good: [64d58d98ff982ccfe2c75f3f3a68883bb857bbea] source-hash-8e58d9d08caecc868b1f4fed78101c7bdb0834ab
    git bisect good 64d58d98ff982ccfe2c75f3f3a68883bb857bbea
    # bad: [ff5c961cdff2fe1319b8a138879123d854220b4d] source-hash-cfbcce701cd6dc3af6086428399136efef33ff59
    git bisect bad ff5c961cdff2fe1319b8a138879123d854220b4d
    # bad: [3122214ee3dc70716ba02e425d4e128d90f5341f] source-hash-eeb8297e47bae11f2aeaa7bae6e51eee921e9e58
    git bisect bad 3122214ee3dc70716ba02e425d4e128d90f5341f
    # first bad commit: [3122214ee3dc70716ba02e425d4e128d90f5341f] source-hash-eeb8297e47bae11f2aeaa7bae6e51eee921e9e58
Comment 12 Gordo 2015-08-13 08:50:48 UTC
*** Bug 93406 has been marked as a duplicate of this bug. ***
Comment 13 Buovjaga 2015-10-08 11:10:46 UTC
*** Bug 94805 has been marked as a duplicate of this bug. ***
Comment 14 Robinson Tryon (qubit) 2015-12-13 11:13:22 UTC Comment hidden (obsolete)
Comment 15 Miklos Vajna 2015-12-23 21:47:38 UTC
(In reply to Julien Nabet from comment #6)
> Miklos: thought you might be interested in this one.

I'll take care of this.
Comment 16 Commit Notification 2016-01-06 08:00:18 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ac6bfd85df271b650dbd24b45391dac346ecd72c

tdf#92045 DOCX import: <w:effect w:val="none"/> doesn't mean blinking

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2016-01-11 12:52:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5e7f23292d8c67a65b86e6273b38e8310431ae20&h=libreoffice-5-1

tdf#92045 DOCX import: <w:effect w:val="none"/> doesn't mean blinking

It will be available in 5.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2016-01-11 16:21:51 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a31708d9df01e7eae5c9ca39f4ee82fd6644dfe6&h=libreoffice-5-0

tdf#92045 DOCX import: <w:effect w:val="none"/> doesn't mean blinking

It will be available in 5.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.