tdf#92045 DOCX import: <w:effect w:val="none"/> doesn't mean blinking

Regression from commit eeb8297e47bae11f2aeaa7bae6e51eee921e9e58 (Use
constants for ST_TextEffect values, 2014-09-22), the problem was that
while the tokenizer stopped using hardcoded token values, the matching
dmapper code wasn't adapted.

Change-Id: Id61912e9c9458efc87e0a6f8e461663942c555f0