writerfilter/source/dmapper/DomainMapper.cxx
@@ -1653,7 +1653,7 @@ void DomainMapper::sprmWithProps( Sprm& rSprm, PropertyMapPtr rContext )
     case NS_ooxml::LN_EG_RPrBase_effect:
         // The file-format has many character animations. We have only
         // one, so we use it always. Suboptimal solution though.
-        if (nIntValue)
+        if (nIntValue != NS_ooxml::LN_Value_ST_TextEffect_none)
             rContext->Insert(PROP_CHAR_FLASH, uno::makeAny( true ));
         else
             rContext->Insert(PROP_CHAR_FLASH, uno::makeAny( false ));
